--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,6 @@ venv/
 
 
 # studeis data inside assignemnt3
-# assignemnt3/data/studies/
+assignemnt3/data/studies/
 
 assignemnt3/code/aco_visualizations/
