--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,8 @@ venv/
 
 # studeis data inside assignemnt3
 # assignemnt3/data/studies/
+assignemnt3/.auixilary/
+assignemnt3/from_assignment2/.auixilary/
+
 
 assignemnt3/code/aco_visualizations/
